// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deepMutate(obj, walkFn) array 1`] = `
Object {
  "foozoo": "barland",
  "somezoo": Object {
    "otherzoo": Array [
      1,
      2,
      Object {
        "insidezoo": "arrayland",
      },
    ],
  },
}
`;

exports[`deepMutate(obj, walkFn) deep 1`] = `
Object {
  "foozoo": "barland",
  "somezoo": Object {
    "otherzoo": "deeperland",
  },
}
`;

exports[`deepMutate(obj, walkFn) simple 1`] = `
Object {
  "foozoo": "barland",
}
`;
